# llmproxy

./: Cargo.toml  README.md  report.md
benchmark_suite/: run_mmlu.py  run_toolbench.py
src/: json_repair.rs  main.rs
