[package]
name = "labs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dotenvy = "0.15"
futures-util = "0.3"
json5 = "0.4"
jsonschema = "0.16"
regex = "1.11"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.10", features = ["v4"] }
